--- a/22_10.yml
+++ b/22_10.yml
@@ -1,7 +1,7 @@
 #YAML
 
 university:
-    faculty: [law, economics, technical]
+    faculty: [law, economics]
     law:
        - national
        - international
